--- a/TODO
+++ b/TODO
@@ -1,41 +1,61 @@
-fix integrations
-    modules not triggering
-add error logging
-    in ContextGenerator
-    in Discord module
-    in GUI module
-add module state tracking 
-    persist states between restarts
-    handle state conflicts
-improve context generation
-    enhance module detection
-    better priority handling
-    memory relevance scoring
-add monitoring
-    system health checks
-    performance metrics
-    usage analytics
-handle edge cases
-    long conversations
-    concurrent module access
-    resource limits
-clean up dependencies
-    update requirements.txt
-    handle version conflicts
-    document external deps
-add modules
-    email integration
-    spotify/music control
-    weather module
-    task/todo management
-    web search/browser
-    file management
-    system monitoring
-    text summarization
-    translation services
-    voice interaction
-    image generation/handling
-    note taking
-    calculator/math
-    news aggregation
-    smart home control
+high priority
+    fix integrations
+        modules not triggering
+        complete reminder system implementation
+        finish calendar integration
+        complete notes system
+        
+    add error logging
+        in ContextGenerator
+        enhance Discord module error handling
+        in GUI module
+        add logging for memory operations
+        
+    add module state tracking 
+        persist states between restarts
+        handle state conflicts
+        implement command cooldowns globally
+
+medium priority
+    improve context generation
+        enhance module detection
+        better priority handling
+        memory relevance scoring
+        standardize context creation across modules
+        
+    add monitoring
+        system health checks
+        performance metrics
+        usage analytics
+        memory usage tracking
+        
+    handle edge cases
+        long conversations
+        concurrent module access
+        resource limits
+        rate limiting
+        timeout handling
+
+low priority
+    clean up dependencies
+        update requirements.txt
+        handle version conflicts
+        document external deps
+        consolidate common utilities
+        
+    add modules
+        email integration
+        spotify/music control
+        weather module
+        task/todo management
+        web search/browser
+        file management
+        system monitoring
+        text summarization
+        translation services
+        voice interaction
+        image generation/handling
+        note taking
+        calculator/math
+        news aggregation
+        smart home control
