--- a/TODO
+++ b/TODO
@@ -16,6 +16,9 @@ high_priority:
         description: "Notification system"
         status: testing
 
+  website:
+	fix
+
   error_handling:
     - logging_implementation:
         areas:
